# temp_safe_network

./: .dockerignore  .editorconfig  .env.example  .gitignore  .travis-disabled.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.android.armv7.build  Dockerfile.android.x86_64.build  Dockerfile.build  Jenkinsfile  Justfile  LICENSE  LICENSE-BSD  LICENSE-MIT  Makefile  README-symlinks.md  README.md  appveyor.yml  bors.toml  build.rs  ci_script.sh  codeowners  fake_vault_data.txt  index.md  logfile  maidsafe_client-b676cf89b5b9fc72.bootstrap.cache  main.rs  peers.json  recipe.json  reviewpad.yml  rustfmt.toml  startup  terraform.tfstate  travis_build.sh  travis_script.sh
dys_function/: Cargo.toml
dys_function/src/: connections.rs  detection.rs  lib.rs  operations.rs
dysfunction/: Cargo.toml
dysfunction/src/: connections.rs  detection.rs  lib.rs  network_knowledge.rs  operations.rs
ffi_utils/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
ffi_utils/src/: b64.rs  base64.rs  bindgen_utils.rs  byte_vec.rs  callback.rs  catch_unwind.rs  ffi_repr.rs  header_gen.rs  java.rs  lib.rs  macros.rs  repr_c.rs  string.rs  test_utils.rs  vec.rs
jsonrpc-quic/: Cargo.toml  client_endpoint.rs  errors.rs  jsonrpc.rs  lib.rs  quic_client.rs  server_endpoint.rs  utils.rs
log_cmds_inspector/: Cargo.toml  bin.rs
mock_routing/: Cargo.toml
mock_routing/src/: lib.rs
qjsonrpc/: Cargo.toml  client_endpoint.rs  jsonrpc.rs  server_endpoint.rs
qjsonrpc/examples/: ping.rs
qjsonrpc/src/: errors.rs  jsonrpc.rs  lib.rs  server_endpoint.rs
safe-api/: Cargo.toml
safe-api/src/: lib.rs
safe-authd/: Cargo.toml  README.md  authd.rs  errors.rs  main.rs  notifs.rs  operations.rs  operations_win.rs  quic_client.rs  shared.rs  update.rs
safe-authd/requests/: allow.rs  auth_reqs.rs  authed_apps.rs  authorise.rs  create_acc.rs  deny.rs  log_in.rs  log_out.rs  mod.rs  revoke.rs  status.rs  subscribe.rs  unsubscribe.rs
safe-cli/: Cargo.toml  README-symlinks.md  README.md  cli.rs  main.rs  shell.rs  test_file_random_content.txt
safe-cli/benches/: keys.rs  small-put.rs  wallet.rs
safe-cli/operations/: auth.rs  auth_and_connect.rs  auth_daemon.rs  config.rs  fake_auth.rs  helpers.rs  mod.rs  vault.rs
safe-cli/subcommands/: auth.rs  cat.rs  config.rs  container.rs  dog.rs  fake_auth.rs  files.rs  files_get.rs  helpers.rs  keys.rs  mod.rs  networks.rs  nrs.rs  seq.rs  setup.rs  update.rs  vault.rs  wallet.rs  xorurl.rs
safe-cli/tests/: cli_cat.rs  cli_dog.rs  cli_files.rs  cli_files_get.rs  cli_keys.rs  cli_nrs.rs  cli_seq.rs  cli_wallet.rs  cli_xorurl.rs
safe-cmd-test-utilities/: Cargo.toml
safe-cmd-test-utilities/src/: lib.rs
safe-ffi/: Cargo.toml  build.rs  lib.rs
safe-ffi/ffi/: errors.rs  fetch.rs  ffi_structs.rs  files.rs  helpers.rs  ipc.rs  keys.rs  logging.rs  mod.rs  nrs.rs  sequence.rs  wallet.rs  xorurl.rs
safe-ffi/sample_log_file/: log.toml
safe_api_ffi/: Cargo.toml  build.rs  lib.rs
safe_api_ffi/ffi/: fetch.rs  ffi_structs.rs  files.rs  helpers.rs  keys.rs  mod.rs  nrs.rs  wallet.rs  xorurl.rs
safe_app/: CHANGELOG.md  Cargo.toml  README.md  build.rs
safe_app/examples/: client_stress_test.rs  gen_invites.rs  self_authentication.rs
safe_app/resources/: AppBindings.Manual.cs  AppTypes.Manual.cs  IAppBindings.Manual.cs  IMockAuthBindings.Manual.cs  MockAuthBindings.Manual.cs
safe_app/src/: bindings_jni.rs  cipher_opt.rs  client.rs  errors.rs  lib.rs  object_cache.rs  permissions.rs  test_utils.rs  tests.rs
safe_app_jni/: Cargo.toml
safe_app_jni/src/: lib.rs
safe_authenticator/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
safe_authenticator/src/: access_container.rs  app_auth.rs  app_container.rs  apps.rs  bindings_jni.rs  client.rs  config.rs  errors.rs  ipc.rs  lib.rs  public_id.rs  revocation.rs  std_dirs.rs  test_utils.rs  tests.rs
safe_authenticator_jni/: Cargo.toml
safe_authenticator_jni/src/: lib.rs
safe_core/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  expanded.rs
safe_core/examples/: client_stress_test.rs  email.rs  email_stress_test.rs  gen_invites.rs  self_authentication.rs
safe_core/sample_config/: safe_core.default.config  sample.safe_core.config  sample_disk.safe_core.config  sample_memory.safe_core.config
safe_core/src/: arrays.rs  blob.rs  config_handler.rs  connection_manager.rs  core_structs.rs  crypto.rs  errors.rs  event.rs  event_loop.rs  ffi.rs  immutable_data.rs  lib.rs  network_event.rs  self_encryption_storage.rs  self_encryption_storage_dry_run.rs
safenode/: Cargo.toml
safenode/examples/: registers.rs
safenode/src/: error.rs  lib.rs
sn/: CHANGELOG.md  Cargo.toml  README.md
sn/benches/: upload_bytes.rs
sn/examples/: client_blob.rs  client_files.rs  config_handling.rs  network_split.rs  put_get.rs  routing_minimal.rs  routing_stress.rs
sn/src/: lib.rs
sn_api/: CHANGELOG.md  Cargo.toml  README.md
sn_api/examples/: fetch_blob.rs  fetch_file.rs  file_upload.rs  safeurls.rs
sn_api/src/: common.rs  constants.rs  errors.rs  lib.rs
sn_api/testdata/: noextension
sn_authd/: Cargo.toml  README.md  authd.rs  errors.rs  main.rs  notifs.rs  operations.rs  update.rs
sn_authd/requests/: allow.rs  authed_apps.rs  authorise.rs  create.rs  create_acc.rs  deny.rs  lock.rs  log_in.rs  log_out.rs  mod.rs  status.rs  unlock.rs
sn_cli/: CHANGELOG.md  Cargo.toml  README-symlinks.md  README.md  build.rs  cli.rs  main.rs  shell.rs  test_file_random_content.txt
sn_cli/benches/: files.rs  keys.rs  put.rs  wallet.rs
sn_cli/operations/: auth_and_connect.rs  auth_daemon.rs  config.rs  fake_auth.rs  helpers.rs  mod.rs  node.rs  vault.rs
sn_cli/src/: cli.rs  main.rs  shell.rs
sn_cli/subcommands/: auth.rs  cat.rs  config.rs  dog.rs  files.rs  files_get.rs  helpers.rs  (+10 more)
sn_client/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
sn_cmd_test_utilities/: Cargo.toml
sn_comms/: CHANGELOG.md  Cargo.toml  README.md
sn_dysfunction/: CHANGELOG.md  Cargo.toml  README.md
sn_fault_detection/: CHANGELOG.md  Cargo.toml  README.md
sn_interface/: CHANGELOG.md  Cargo.toml  README.md
(+2782 files in other folders)
