[workspace]
members = [
    "sn_node",
    "sn_api",
    "sn_client",
    "sn_cli",
    "sn_dysfunction",
    "sn_cmd_test_utilities",
    "log_cmds_inspector",
    "sn_interface",
    "testnet"
]

[patch.crates-io]
xor_name = { git = "https://github.com/maidsafe/xor_name", branch = "feat-serialize-hex-string" }
