[workspace]
members = [
    "sn_node",
    "sn_api",
    "sn_client",
    "sn_cli",
    "sn_fault_detection",
    "sn_cmd_test_utilities",
    "log_cmds_inspector",
    "sn_interface",
    "testnet"
]

[patch.crates-io]
qp2p = { git = "https://github.com/b-zee/qp2p", branch = "refactor-single-wiremsg-per-stream" }
