[package]
name = "stableset_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = { version = "1.0.1", features = ["serde"] }
custom_debug = "~0.5.0"
dashmap = {version = "5.1.0", features = [ "serde" ]}
futures = "~0.3.13"
qp2p = "0.36.1"
rand = "~0.8.5"
serde = {version = "1.0.133", features = [ "derive", "rc" ]}
thiserror = "1.0.23"
tokio = { version = "1.0.23", features = [ "sync" ] }
tracing = "~0.1.26"