[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "FFI utilities"
documentation = "https://docs.rs/ffi_utils"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ffi_utils"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.1.0"

[dependencies]
base64 = "~0.4.1"
log = "~0.3.7"
serde = "~0.9.12"
serde_derive = "~0.9.12"
unwrap = "~1.1.0"

[dev-dependencies]
rand = "~0.3.15"
