[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "FFI utilities"
documentation = "https://docs.rs/ffi_utils"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "ffi_utils"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.5.0"

[dependencies]
clap = "=2.25.1"
base64 = "~0.9.0"
log = "~0.4.1"
moz-cheddar = "~0.4.2"
regex = "~0.2.5"
serde = "~1.0.27"
serde_derive = "~1.0.27"
unwrap = "~1.1.0"

[dev-dependencies]
rand = "~0.4.2"
