[package]
name = "jsonrpc-quic"
version = "0.0.2"
description = "JSON-RPC over QUIC for safe-authd comm"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
directories = "2.0.2"
futures = "~0.1.21"
log = "0.4.6"
quinn = "~0.3.0"
rand = "0.6.5"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.41"
tokio = "0.1.6"
tokio-current-thread = "0.1"
tokio-reactor = "0.1.1"
url = "1.7.2"
