[package]
name = "jsonrpc-quic"
version = "0.0.6"
description = "JSON-RPC over QUIC for safe-authd comm"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
directories = "^2.0.2"
futures = "~0.3.5"
log = "~0.4.8"
rand = "~0.7.3"
rcgen = "~0.7.0"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.44"
url = "^2.1.1"
quinn = {version = "~0.6.0", features=["tls-rustls"], default-features = false}
