[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "The Safe Network Logs Inspector."
documentation = "https://docs.rs/sn_node"
edition = "2021"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "log_cmds_inspector"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_network"
version = "0.1.0"


[features]
default = []

[[bin]]
path="bin.rs"
name="log_cmds_inspector"



[dependencies]
eyre = "~0.6.5"
grep="~0.2.8"
clap = { version = "3.0.0", features = ["derive", "env"] }
strum = "0.24"
strum_macros = "0.24"
walkdir = "2"
sn_interface = { path = "../sn_interface", version = "^0.17.2" }
