[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Mock routing"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "mock_routing"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.1.0"

[dependencies]
maidsafe_utilities = "~0.18.0"
rust_sodium = "~0.10.2"
rand = "~0.3.18"
safe-nd = "~0.3.0"
serde = "~1.0.27"
serde_derive = "~1.0.27"
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.0"
