[package]
name = "qjsonrpc"
version = "0.0.10"
description = "JSON-RPC over QUIC comm"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_api"
keywords = ["quic"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "ping"

[dependencies]
dirs-next = "1.0.1"
futures = "~0.3.5"
log = "~0.4.8"
rand = "~0.7.3"
rcgen = "~0.7.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.1"
quinn = {version = "~0.6.1", features=["tls-rustls"], default-features = false}

[dev-dependencies]
tempfile = "3"
tokio = { version = "~0.2.21", features = ["rt-core", "macros"] }