[package]
name = "qjsonrpc"
version = "0.1.1"
description = "JSON-RPC over QUIC comm"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_api"
keywords = ["quic"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[example]]
name = "ping"

[dependencies]
futures = "~0.3.12"
log = "~0.4.14"
rand = "~0.7.3"
rcgen = "~0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
url = "2.2.0"
quinn = {version = "~0.6.1", features=["tls-rustls"], default-features = false}

[dev-dependencies]
tempfile = "3"
tokio = { version = "~0.2.25", features = ["rt-core", "macros"] }
