[package]
name = "safe-api"
version = "0.8.0"
description = "SAFE API"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>", "Calum Craig <calum.craig@maidsafe.net>", "Chris O'Neil <chris.oneil@gmail.com>"]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
include = ["Cargo.toml", "src/api/*", "src/lib.rs"]
edition = "2018"

[dependencies]
bincode = "~1.1.4"
chrono = "0.4.6"
directories = "2.0.2"
env_logger = "0.6.0"
failure = "0.1"
futures = "~0.1.29"
jsonrpc-quic = { path = "../jsonrpc-quic", version = "~0.0.2" }
lazy_static = "1.2.0"
log = "0.4.6"
mime_guess = "2.0.1"
multibase = "0.6.0"
quinn = "~0.3.0"
rand = "0.6.5"
rand_core = "0.4.0"
rcgen = "0.2"
relative-path = "0.4.0"
safe_app = "^0.13.0"
safe_authenticator = "^0.13.0"
safe_core = "^0.38.1"
safe-nd = "^0.6.2"
serde = "1.0.91"
serde_json = "1.0.41"
slog = "2.1"
slog-term = "2"
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
tokio = "0.1.6"
tokio-current-thread = "0.1"
tokio-reactor = "0.1.1"
url = "1.7.2"
urlencoding = "1.0.0"
validator = "0.8.0"
validator_derive = "0.8.0"
walkdir = "~2.0.1" #ffi utils needs this version

[features]
mock-network = ["safe_app/mock-network", "safe_authenticator/mock-network"]
fake-auth = ["safe_app/testing"]
scl-mock = ["fake-auth"]

[dev-dependencies]
unwrap = "~1.2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook","user-hooks"]
