[package]
name = "safe-authd"
version = "0.0.7"
description = "SAFE Authenticator (daemon)"
authors = ["bochaco <gabrielviganotti@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[[bin]]
name = "safe-authd"
path = "main.rs"

[dependencies]
directories = "2.0.2"
env_logger = "0.6.0"
futures = "^0.3.4"
human-panic = "1.0.1"
jsonrpc-quic = { path = "../jsonrpc-quic" }
log = "0.4.6"
rcgen = "^0.7.0"
serde = "1.0.91"
serde_json = "1.0.41"
structopt = "0.2.15"
tokio = { version = "^0.2.13", features = ["rt-threaded"] }
url = "~2.1.1"
urlencoding = "1.0.0"
quinn = {version = "^0.6.0", features=["tls-rustls"], default-features = false}

[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "^0.4.1"

[target.'cfg(target_os = "windows")'.dependencies.windows-service]
git = "https://github.com/mullvad/windows-service-rs"
branch = "master"

[features]
mock-network = ["safe-api/mock-network"]

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["authenticator", "authd_client"]

[dependencies.self_update]
version = "^0.13.0"
default-features = false
features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]

[dev-dependencies]
unwrap = "~1.2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","user-hooks"]
