[package]
name = "safe-cli"
version = "0.8.1"
description = "SAFE CLI"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>", "Calum Craig <calum.craig@maidsafe.net>", "Chris O'Neil <chris.oneil@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
default-run = "safe"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[[bin]]
name = "safe"
path = "main.rs"

[dependencies]
directories = "~2.0.1"
env_logger = "0.6.0"
envy = "0.4.0"
human-panic = "1.0.1"
log = "0.4.6"
prettytable-rs = "^0.8"
rand = "0.6.5"
relative-path = "0.4.0"
reqwest = "0.9.22"
rpassword = "~4.0.5"
safe-api = { path = "../safe-api" }
safe-nlt = { git = "https://github.com/bochaco/safe-network-launch-tool.git", branch = "first-draft-impl" }
serde = "1.0.91"
serde_json = "1.0.39"
serde_yaml = "0.8.11"
shrust = "0.0.7"
structopt = "~0.3.5"
pretty-hex = "0.1.1"

[features]
mock-network = ["safe-api/mock-network"]
fake-auth = ["safe-api/fake-auth"]
scl-mock = ["safe-api/scl-mock"]

[dependencies.self_update]
version = "^0.13.0"
default-features = false
features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]

[dev-dependencies]
assert_cmd = "0.11.1"
duct = "0.12.0"
predicates = "1.0.0"
pretty_assertions = "0.6.1"
safe-nd = "^0.8.0"
unwrap = "~1.2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","user-hooks"]
