[package]
name = "safe-cli"
version = "0.13.0"
description = "SAFE CLI"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
default-run = "safe"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[[bin]]
name = "safe"
path = "main.rs"

[dependencies]
ansi_term = "~0.9.0"
async-std = "^1.6.0"
crossbeam = "~0.7.3"
directories = "^2.0.1"
env_logger = "~0.6.0"
envy = "~0.4.0"
human-panic = "^1.0.1"
log = "~0.4.6"
pretty-hex = "~0.1.1"
prettytable-rs = "~0.8"
rand = "~0.6.5"
relative-path = "~0.4.0"
reqwest = "~0.9.22"
rpassword = "^4.0.5"
safe-nlt = { git = "https://github.com/maidsafe/safe-network-launch-tool.git" }
serde = "^1.0.91"
serde_json = "^1.0.39"
serde_yaml = "~0.8.11"
shrust = "~0.0.7"
structopt = "~0.3.5"
tokio = { version = "~0.2.21", features = ["macros"] }
isatty = "~0.1"
num-traits = "~0.2"
indicatif = { git="https://github.com/mibac138/indicatif", branch="mpb-tick" }
console = "~0.10.0"
percent-encoding = "^2.1.0"

[features]
mock-network = ["safe-api/mock-network"]
fake-auth = ["safe-api/fake-auth"]
scl-mock = ["safe-api/scl-mock"]

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authd_client"]

[dependencies.self_update]
version = "~0.15.0"
default-features = false
features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]

[dev-dependencies]
assert_cmd = "0.11.1"
duct = "0.12.0"
predicates = "1.0.0"
pretty_assertions = "0.6.1"
safe-nd = "^0.9.0"
unwrap = "~1.2.1"
criterion = "0.3"
walkdir = "~2.3.1"
tiny-keccak = "~1.5.0"
multibase = "0.6.0"
safe-cmd-test-utilities = { path = "../safe-cmd-test-utilities" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook","user-hooks"]

# Our various benchmakrs.
# Harness=false disables rust baked in bench to use criterion instead.
[[bench]]
name = "put"
harness = false
[[bench]]
name = "keys"
harness = false
[[bench]]
name = "wallet"
harness = false
