[package]
name = "safe-cmd-test-utilities"
version = "1.0.0"
description = "SAFE CLI Test Utilities"
authors = ["bochaco <gabrielviganotti@gmail.com>", "Josh Wilson <joshuef@gmail.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
edition = "2018"

[dependencies]
rand = "~0.6.5"
serde = "^1.0.91"
serde_json = "^1.0.39"
safe-nd = "^0.9.0"
duct = "0.12.0"
unwrap = "~1.2.1"


[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authd_client"]
