[package]
name = "safe-ffi"
version = "0.12.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
build = "build.rs"
edition = "2018"

[lib]
name = "safe_ffi"
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
async-std = "^1.6.0"
ffi_utils = "~0.16.0"
# Required by ffi_utils macros.
log = "~0.4.8"
safe-nd = "~0.8.0"
serde = "^1.0.91"
serde_json = "^1.0.39"
safe_core = { git = "https://github.com/joshuef/safe_client_libs.git", branch = "Feat-EnAsyncAwaitAllTheThings" }
bincode = "^1.1.4"
safe_authenticator_ffi = { version = "~0.15.0", optional = true }

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authd_client"]

[dev-dependencies]
unwrap = "^1.2.1"

[build-dependencies]
safe_bindgen = { git = "https://github.com/maidsafe/safe_bindgen", optional = true }
safe-nd = "~0.8.0"
unwrap = "^1.2.1"

[features]
mock-network = ["safe-api/mock-network", "safe_authenticator_ffi/mock-network"]
fake-auth = ["safe-api/fake-auth"]
bindings = ["safe_bindgen"]
