[package]
name = "safe-ffi"
version = "0.15.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
build = "build.rs"
edition = "2018"

[lib]
name = "safe_ffi"
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
async-std = "1.6.0"
ffi_utils = "~0.17.0"
# Required by ffi_utils macros.
log = "~0.4.8"
safe-nd = "~0.10.1"
serde = "1.0.91"
serde_json = "1.0.39"
safe_core = "~0.42.1"
bincode = "1.1.4"
safe_authenticator = { git = "https://github.com/maidsafe/safe_client_libs", branch = "master" }

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authenticator"]

[dev-dependencies]
unwrap = "1.2.1"

[build-dependencies]
safe_bindgen = { git = "https://github.com/maidsafe/safe_bindgen", optional = true }
safe-nd = "~0.10.1"
unwrap = "1.2.1"

[features]
bindings = ["safe_bindgen"]
scl-mock = ["safe-api/scl-mock", "safe_authenticator/mock-network", "safe_core/mock-network"]
