[package]
name = "safe-ffi"
version = "0.15.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/safe-api"
build = "build.rs"
edition = "2018"

[lib]
name = "safe_ffi"
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
sn_ffi_utils = "~0.18.0"
# Required by sn_ffi_utils macros.
log = "~0.4.8"
safe-nd = "~0.11.0"
serde = "1.0.91"
serde_json = "1.0.39"
safe_core = "~0.43.0"
bincode = "1.2.1"
safe_authenticator = "~0.18.0"
tokio = { version = "~0.2.21", features = ["rt-core"] }
xor_name = "1"

[dependencies.safe-api]
path = "../safe-api"
default-features = false
features = ["app", "authenticator"]

[dev-dependencies]
unwrap = "1.2.1"

[build-dependencies]
sn_bindgen = { git = "https://github.com/maidsafe/sn_bindgen", optional = true }
xor_name = "1"
unwrap = "1.2.1"

[features]
bindings = ["sn_bindgen"]
scl-mock = ["safe-api/scl-mock", "safe_authenticator/mock-network", "safe_core/mock-network"]
