[package]
name = "safe_api_ffi"
version = "0.4.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe-cli"
build = "build.rs"
edition = "2018"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
safe_api = { path = "../" }
safe_core = "~0.33.0"
safe-nd = "~0.3.0"
log = "0.4.6"
structopt = "0.2.15"
env_logger = "0.6.0"
rand = "0.6.5"
rand_core = "0.4.0"
prettytable-rs = "^0.8"
threshold_crypto = "~0.3.2"
serde = "1.0.91"
serde_json = "1.0.39"
bincode = "1.1.4"
multibase = "0.6.0"
reqwest = "0.9.5"
dirs = "2.0.1"
tiny-keccak = "~1.5.0"
futures = "~0.1.17"
chrono = "0.4.6"
human-panic = "1.0.1"
url = "1.7.2"
relative-path = "0.4.0"
validator = "0.8.0"
validator_derive = "0.8.0"
self_update = "0.5.1"
ffi_utils = "~0.12.0"
maidsafe_utilities = "~0.18.0"

[build-dependencies]
safe_bindgen = { version = "~0.13.1", optional = true }
rust_sodium = "~0.10.2"
safe-nd = "~0.3.0"
unwrap = "~1.2.1"

[features]
mock-network = ["safe_api/mock-network"]
fake-auth = ["safe_api/fake-auth"]
scl-mock = ["safe_api/scl-mock"]
bindings = ["safe_bindgen"]

[dev-dependencies]
pretty_assertions = "0.6.1"
predicates = "1.0.0"
assert_cmd = "0.11.1"
duct = "0.12.0"
unwrap = "~1.2.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook","user-hooks"]
