[package]
name = "safe_api_ffi"
version = "0.4.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe-cli"
edition = "2018"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
safe_api = { path = "../" }
ffi_utils = "~0.12.0"
safe_core = "~0.33.0"
safe-nd = "~0.3.0"
