[package]
name = "safe_api_ffi"
version = "0.4.0"
description = "SAFE API FFI"
authors = ["Ravinder Jangra <ravinderjangra@live.com>"]
publish = false
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe-cli"
edition = "2018"

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
path = "lib.rs"

[dependencies]
safe_api = { path = "../" }
ffi_utils = "~0.12.0"
safe_core = "~0.33.0"
serde = "1.0.91"
serde_json = "1.0.39"
safe-nd = "~0.3.0"

[dev-dependencies]
unwrap = "~1.2.1"

[features]
mock-network = ["safe_api/mock-network"]
fake-auth = ["safe_api/fake-auth"]
