[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "SAFE App"
documentation = "https://docs.rs/safe_app"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe_app"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.10.0"

[dependencies]
bincode = "~1.1.4"
config_file_handler = "~0.11.0"
env_logger = { version = "~0.6.2", optional = true }
ffi_utils = "~0.12.0"
futures = "~0.1.17"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
log4rs = "~0.8.3"
lru-cache = "~0.1.1"
maidsafe_utilities = "~0.18.0"
rand = "~0.3.18"
new_rand = { package = "rand", version = "0.6" }
rust_sodium = "~0.10.2"
safe_authenticator = { path = "../safe_authenticator", version = "~0.10.0", optional = true }
safe_core = { path = "../safe_core", version = "~0.35.0" }
safe-nd = "~0.4.0"
self_encryption = "~0.15.0"
serde = "~1.0.27"
serde_derive = "~1.0.27"
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
tokio = "~0.1.22"
unwrap = "~1.2.0"

[dev-dependencies]
clap = "~2.33.0"
env_logger = "~0.6.2"
safe_authenticator = { path = "../safe_authenticator", version = "~0.10.0", features = ["testing"] }
safe_core = { path = "../safe_core", version = "~0.35.0", features = ["testing"] }

[build-dependencies]
ffi_utils = "~0.12.0"
jni = "~0.12.0"
rust_sodium = "~0.10.2"
safe_bindgen = { version = "~0.13.1", optional = true }
safe-nd = "~0.4.0"
unwrap = "~1.2.0"

[features]
mock-network = ["testing", "safe_core/mock-network", "safe_authenticator/mock-network"]
testing = ["safe_core/testing", "safe_authenticator/testing", "env_logger"]
bindings = ["safe_bindgen"]

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]

[[example]]
bench = false
name = "client_stress_test"

[[example]]
bench = false
name = "self_authentication"
