[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE App"
documentation = "https://docs.rs/safe_app"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe_app"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.15.1"

[dependencies]
async-trait = "~0.1.30"
bincode = "~1.1.4"
env_logger = { version = "~0.6.2", optional = true }
ffi_utils = "0.16.0"
futures = "~0.3.5"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
lru-cache = "~0.1.1"
miscreant = { version = "0.4.2", features = ["soft-aes"] }
rand = "0.6"
safe_authenticator = { path = "../safe_authenticator", version = "~0.15.0", optional = true }
safe_core = { path = "../safe_core", version = "~0.40.0" }
safe-nd = "~0.8.0"
self_encryption = { git = "https://github.com/bochaco/self_encryption", branch = "refactor-seq-encryption" }
serde = "~1.0.27"
serde_derive = "~1.0.27"
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
tokio = { version="~0.2.21", features=["rt-core", "rt-util"] }
unwrap = "~1.2.0"

[dev-dependencies]
clap = "~2.33.0"
env_logger = "~0.6.2"
safe_authenticator = { path = "../safe_authenticator", version = "~0.15.0", features = ["testing"] }
safe_core = { path = "../safe_core", version = "~0.40.0", features = ["testing"] }

[build-dependencies]
ffi_utils = "~0.16.0"
jni = "~0.12.0"
safe_bindgen = { version = "~0.13.2", optional = true }
safe-nd = "~0.8.0"
threshold_crypto = "~0.3.2"
unwrap = "~1.2.0"

[features]
mock-network = ["testing", "safe_core/mock-network", "safe_authenticator/mock-network"]
testing = ["safe_core/testing", "safe_authenticator/testing", "env_logger"]
bindings = ["safe_bindgen"]

[[example]]
bench = false
name = "client_stress_test"

[[example]]
bench = false
name = "self_authentication"
