[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE App"
documentation = "https://docs.rs/safe_app"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe_app"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.17.1"

[dependencies]
async-trait = "~0.1.30"
bincode = "1.2.1"
env_logger = { version = "~0.6.2", optional = true }
ffi_utils = "~0.17.0"
futures = "~0.3.5"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
lru-cache = "~0.1.1"
miscreant = { version = "~0.4.2", features = ["soft-aes"] }
rand = "~0.7.3"
safe_authenticator = { path = "../safe_authenticator", version = "~0.17.1", optional = true }
safe_core = { path = "../safe_core", version = "~0.42.1" }
safe-nd = "~0.10.1"
self_encryption = "~0.18.0"
serde = "1.0.27"
serde_derive = "1.0.27"
threshold_crypto = "0.4.0"
tiny-keccak = "1.5.0"
tokio = { version="~0.2.21", features=["rt-core", "rt-util"] }
unwrap = "1.2.0"
xor_name = "1"

[dev-dependencies]
clap = "2.33.0"
env_logger = "~0.6.2"
safe_authenticator = { path = "../safe_authenticator", version = "~0.17.1", features = ["testing"] }
safe_core = { path = "../safe_core", version = "~0.42.1", features = ["testing"] }

[build-dependencies]
ffi_utils = "~0.17.0"
jni = "~0.12.0"
safe_bindgen = { version = "~0.13.2", optional = true }
safe-nd = "~0.10.1"
threshold_crypto = "0.4.0"
unwrap = "1.2.0"

[features]
mock-network = ["testing", "safe_core/mock-network", "safe_authenticator/mock-network", "simulated-payouts"]
testing = ["safe_core/testing", "safe_authenticator/testing", "env_logger"]
bindings = ["safe_bindgen"]
simulated-payouts = ["safe-nd/simulated-payouts", "safe_core/simulated-payouts"]

[[example]]
bench = false
name = "client_stress_test"

[[example]]
bench = false
name = "self_authentication"
