[package]
name = "safe_app_jni"
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE App JNI wrapper"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.1.0"

[dependencies]
ffi_utils = "~0.9.0"
jni = "~0.10.1"
safe_core = { path = "../safe_core", version = "~0.31.0" }
unwrap = "~1.2.0"

[dependencies.safe_app]
path = "../safe_app"
version = "~0.8.0"
features = ["bindings"]

[lib]
crate_type = ["cdylib"]

[features]
use-mock-routing = ["testing", "safe_core/use-mock-routing", "safe_app/use-mock-routing"]
testing = ["safe_core/testing", "safe_app/testing"]
