[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
edition = "2018"
description = "SAFE Authenticator"
documentation = "https://docs.rs/safe_authenticator"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_authenticator"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.11.0"

[dependencies]
bincode = "~1.1.4"
ffi_utils = "~0.14.0"
futures = "~0.1.17"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
lru-cache = "~0.1.1"
quic-p2p = "~0.3.0"
rand = "0.6"
rust_sodium = "~0.10.2"
safe_core = { path = "../safe_core", version = "~0.36.0" }
safe-nd = "~0.6.0"
serde = { version = "~1.0.97", features = ["derive"] }
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
tokio = "~0.1.22"
unwrap = "~1.2.0"
env_logger = { version = "~0.6.2", optional = true }

[dev-dependencies]
env_logger = "~0.6.2"
safe_core = { path = "../safe_core", version = "~0.36.0", features = ["testing"] }

[build-dependencies]
ffi_utils = "~0.14.0"
jni = "~0.12.0"
rust_sodium = "~0.10.2"
safe_bindgen = { version = "~0.13.1", optional = true }
safe-nd = "~0.6.0"
unwrap = "~1.2.0"

[features]
mock-network = ["testing", "safe_core/mock-network"]
testing = ["safe_core/testing", "env_logger"]
bindings = ["safe_bindgen"]

[lib]
crate_type = ["staticlib", "rlib", "cdylib"]
