[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
edition = "2018"
description = "SAFE Authenticator"
documentation = "https://docs.rs/safe_authenticator"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_authenticator"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_client_libs"
version = "0.15.0"

[dependencies]
async-trait = "~0.1.30"
bincode = "~1.1.4"
ffi_utils = "~0.16.0"
futures = "~0.3.5"
futures-util = "~0.3.4"
jni = { version = "~0.12.0", optional = true }
log = "~0.4.1"
lru-cache = "~0.1.1"
rand = "0.6"
safe_core = { path = "../safe_core", version = "~0.40.0" }
safe-nd = "~0.8.0"
serde = { version = "~1.0.97", features = ["derive"] }
threshold_crypto = "~0.3.2"
tiny-keccak = "~1.5.0"
tokio = { version="~0.2.21", features=["full"] }
unwrap = "~1.2.0"
env_logger = { version = "~0.6.2", optional = true }

[dev-dependencies]
env_logger = "~0.6.2"
safe_core = { path = "../safe_core", version = "~0.40.0", features = ["testing"] }

[build-dependencies]
ffi_utils = "~0.16.0"
jni = "~0.12.0"
safe-nd = "~0.8.0"
threshold_crypto = "~0.3.2"
unwrap = "~1.2.0"

[features]
mock-network = ["testing", "safe_core/mock-network"]
testing = ["safe_core/testing", "env_logger"]
